Fix line spacing on frontpage list

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,6 @@ ul.posts {
 
 ul.posts li {
     list-style-type: none;
-    margin: 1em 0;
     font-size: 1.2em;
 }
 
